--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -369,3 +369,10 @@ footer a:hover {
 
 /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
 @media only screen and (max-width: 479px) {}
+
+.app {
+    width: 400px;
+    margin-left: 20px;
+    height: 400px;
+    background-color: #eeeeee
+}
